--- a/app/views/timer/_project_select.html.erb
+++ b/app/views/timer/_project_select.html.erb
@@ -6,6 +6,11 @@
     <div class="modal-content">
       <div class="modal-header">
         Select project
+
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+
       </div>
       <div class="modal-body">
 
@@ -34,10 +39,9 @@
 
       </div>
       <div class="modal-footer">
+        <span>+ Create a new project</span>
         <button type="button" class="btn btn-secondary"
                 data-dismiss="modal">Close</button>
-
-        <span>+ Create a new project</span>
       </div>
     </div>
   </div>
