--- a/app/views/timer/index.html.erb
+++ b/app/views/timer/index.html.erb
@@ -15,6 +15,8 @@
     </div>
   </div>
 
+  <%= render 'layouts/alert_notices' %>
+
   <div id="activity-report">
     <%= render 'activity_report' %>
   </div>
