--- a/app/views/timer/_project_select.html.erb
+++ b/app/views/timer/_project_select.html.erb
@@ -30,7 +30,7 @@
                data-project_name="<%= project_name %>"
                data-project_color="<%= project.color %>"
               >
-               <div class="dot" style="background-color: <%= project.color %>;"></div>
+               <div class="project-dot" style="background-color: <%= project.color %>;"></div>
                <%= project_name %>
              </div>
           <% end %>
