Reduce font size from 16px (1rem) to 14px.

--- a/app/javascript/stylesheets/variables.scss
+++ b/app/javascript/stylesheets/variables.scss
@@ -15,6 +15,9 @@ $sep5: calc(#{$sep} / 2);
 $left-nav-width: 90px;
 $top-nav-height: 70px;
 
+$font-size: 14px;
+$font-bigger: 16px;
+
 // Customize Bootstrap variables.
 $secondary: $headers;
 $link-color: #5555cc;
