--- a/app/views/projects/_form.html.erb
+++ b/app/views/projects/_form.html.erb
@@ -42,14 +42,13 @@
 
   <% else %>
 
-    <input
-      type="submit"
-      value="Add project"
-      class="btn btn-secondary my-1 mr-1">
+    <input type="submit"
+           value="Add project"
+           class="btn btn-secondary my-1 mr-1">
 
-      <%= link_to 'Cancel', client_path(@project.client),
+    <%= link_to 'Cancel', client_path(@project.client),
       class: 'btn btn-secondary my-1 mr-1'
-    %>
+      %>
 
   <% end %>
 
