--- a/app/views/timer/_activity_report.html.erb
+++ b/app/views/timer/_activity_report.html.erb
@@ -27,3 +27,10 @@
 
   </div>
 <% end %>
+
+<div class="load-more">
+  <%= button_to 'Load more', timer_load_more_path,
+      params: { show_days: @activity_report.show_days + 10 },
+      method: :post, remote: true,
+      form_class: 'btn btn-outline-primary' %>
+</div>
