Larger top menu font.

--- a/app/javascript/stylesheets/views/page-layout.scss
+++ b/app/javascript/stylesheets/views/page-layout.scss
@@ -44,6 +44,7 @@ body {
       height: $top-nav-height;
       padding: $sep;
       box-shadow: 0px 2px 6px 0px rgba(0, 0, 0, 0.13);
+      font-size: $font-bigger;
 
       display: flex;
       flex-wrap: wrap;
