Activity report edit name bug fix.

--- a/app/views/timer/_time_line.html.erb
+++ b/app/views/timer/_time_line.html.erb
@@ -21,8 +21,9 @@
 
     <%= text_field_tag(:name, task.name,
       'data-scope': "activity.name.#{line_type}",
-      'data-id': task.id,
+      'data-id': session.id,
       placeholder: 'Add description',
+      id: "#{line_type}-#{session.id}",
       size: name_size
     ) %>
 
