--- a/app/views/admin/users/index.html.erb
+++ b/app/views/admin/users/index.html.erb
@@ -16,7 +16,7 @@
         </td>
         <td><%= user.first_name %></td>
         <td><%= user.last_name %></td>
-        <td><%= user.roles %></td>
+        <td><%= user.role_s %></td>
       </tr>
     <% end %>
   </table>
