--- a/app/views/admin/users/show.html.erb
+++ b/app/views/admin/users/show.html.erb
@@ -8,7 +8,7 @@
 <%= tr_show :user, :first_name %>
 <%= tr_show :user, :last_name %>
 <%= tr_show :user, :email %>
-<%= tr_show :user, :roles %>
+<%= tr_show :user, :role_s %>
 
 <%= link_to "Edit", edit_admin_user_path(@user) %> |
 
