--- a/app/views/clients/index.html.erb
+++ b/app/views/clients/index.html.erb
@@ -8,3 +8,7 @@
   <%= link_to client.display_name, client_path(client),
       class: 'd-block mb-2' %>
 <% end %>
+
+<% if @clients.count == 0 %>
+  <p>No clients.</p>
+<% end %>
