--- a/app/views/layouts/_alert_notices.html.erb
+++ b/app/views/layouts/_alert_notices.html.erb
@@ -1,8 +1,8 @@
 <div>
   <% if notice %>
-    <span class="text-info ml-2"><%= notice %></span>
+    <div class="text-info m-2"><%= notice %></div>
   <% end %>
   <% if alert %>
-    <span class="text-danger ml-2"><%= alert %></span>
+    <div class="text-danger m-2"><%= alert %></div>
   <% end %>
 </div>
