Responsive timer name input field.

--- a/app/javascript/stylesheets/views/timer-page.scss
+++ b/app/javascript/stylesheets/views/timer-page.scss
@@ -91,6 +91,12 @@ $time-box-size: 60px;
         justify-content: flex-end;
       }
 
+      #timer_name {
+        &:focus {
+          width: 250px;
+        }
+      }
+
       input {
         border-style: none;
       }
