--- a/app/views/timer/_clock_face.html.erb
+++ b/app/views/timer/_clock_face.html.erb
@@ -2,7 +2,7 @@
 
   <div class='left-side'>
     <%= form.text_field :name,
-        size: 25,
+        size: activity_name_input_size(@timer.name),
         'data-scope': 'timer.name',
         'data-timer_id': @timer.id,
         placeholder: 'What are you working on?' %>
