--- a/app/views/layouts/_nav.html.erb
+++ b/app/views/layouts/_nav.html.erb
@@ -1,6 +1,7 @@
 <nav>
 
-  <%= link_to image_pack_tag('jg-logo.svg', id: 'logo', size: '50'),
+  <%= link_to image_pack_tag('jg-logo.svg', id: :logo, size: 50,
+                             alt: 'Home page'),
     root_path, class: 'nav-link' %>
 
   <%= link_to('Home', root_path, class: 'nav-link') %>
