--- a/app/views/timer/_clock_face.html.erb
+++ b/app/views/timer/_clock_face.html.erb
@@ -2,9 +2,9 @@
 
   <div class="left-side">
     <%= form.text_field :name,
-        size: activity_name_input_size(@timer.name),
         'data-scope': 'timer.name',
         'data-timer_id': @timer.id,
+        class: 'name-input',
         placeholder: 'What are you working on?' %>
   </div>
 
