Move deploy target to /u/jgio/activity-timer

--- a/app/views/timer/index.html.erb
+++ b/app/views/timer/index.html.erb
@@ -2,7 +2,7 @@
 
 <div class="timer-page"
     data-controller="activity-name"
-    data-activity-debug="on">
+    data-activity-name-debug="off">
 
   <%= render partial: 'project_select',
             locals: { clients: @activity_report.clients } %>
