--- a/app/views/timer/_project_select.html.erb
+++ b/app/views/timer/_project_select.html.erb
@@ -1,6 +1,6 @@
 <div class="modal fade" id="project-select"
   data-controller="project-select"
-  data-project-select-debug="on"
+  data-project-select-debug="off"
   tabindex="-1" role="dialog" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
